--- a/styles/_chat.scss
+++ b/styles/_chat.scss
@@ -6,7 +6,7 @@
   width: 80vw;
   height: 100vh;
   background-attachment: fixed;
-  background-image: url(/styles/assets/img/chat_background.jpg);
+  background-image: url(./styles/assets/img/chat_background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 
