--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -499,7 +499,7 @@ input[type=checkbox], input[type=radio] {
   width: 80vw;
   height: 100vh;
   background-attachment: fixed;
-  background-image: url(./styles/assets/img/chat_background.jpg);
+  background-image: url(https://wallpapershome.com/images/pages/pic_h/5538.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
